--- a/WebPC/SanPham/main.html
+++ b/WebPC/SanPham/main.html
@@ -23,11 +23,20 @@
                 </ul>
             </nav>
         </div>
+
+        <div class="slide-show">
+            <div class="list-images">
+                <img src="../../Data_(DO_NOT_DELETE)/Image/BigOne.png" width="10%">   
+                <img src="../../Data_(DO_NOT_DELETE)/Image/Kenee.png" width="10%">   
+                <img src="../../Data_(DO_NOT_DELETE)/Image/Lucky.png" width="10%">   
+            </div>
+        </div>
+    
     </header>    
 
     <main>
         <p>This is the main content of your website.</p>
-    </main>
+
 
     <footer>
         <div class="div1">
@@ -37,5 +46,8 @@
             <p>&copy; 2024 Your Website. All rights reserved.</p>
         </div>
     </footer>
+
+    <script src="script.js"></script>
+    <!-- <script src="SanPhamData.js"></script> -->
 </body>
 </html>
