--- a/WebPC/CongTrinhTieuBieu/main.html
+++ b/WebPC/CongTrinhTieuBieu/main.html
@@ -19,35 +19,67 @@
         <span id="last">Tin tức</span>
     </div>
     <img class="header" id="scrollpane">
-
-    <div class="infoBox" id="firstBox">
-        <div class="desciption">
-            <div class="boxTitle">Menu</div>
-            <span class="boxDescription">
-                <ul>
-                <li>Sản Phẩm</li>
-                <li>Bảo Hành</li>
-                <li>Hướng Dẫn Sử Dụng</li>
-                <li>Công trình tiêu biểu</li>
-            </ul>
-            </span>
+<div class="row gx-4">
+    <div class="col-3 ">
+        <div class="infoBox" id="firstBox">
+            <div class="desciption">
+                <div class="boxTitle">Menu</div>
+                <span class="boxDescription">
+                    <ul>
+                    <li>Sản Phẩm</li>
+                    <li>Bảo Hành</li>
+                    <li>Hướng Dẫn Sử Dụng</li>
+                    <li>Công trình tiêu biểu</li>
+                </ul>
+                </span>
+            </div>
+        </div>
+    
+        <div class="infoBox" id="firstBox">
+            <div class="desciption">
+                <div class="boxTitle">Thông tin liên hệ</div>
+                <span class="boxDescription">
+                    <ul>
+                    <li>Sản Phẩm</li>
+                    <li>Bảo Hành</li>
+                    <li>Hướng Dẫn Sử Dụng</li>
+                    <li>Công trình tiêu biểu</li>
+                </ul>
+                </span>
+            </div>
         </div>
     </div>
 
-    <div class="infoBox" id="firstBox">
-        <div class="desciption">
-            <div class="boxTitle">Thông tin liên hệ</div>
-            <span class="boxDescription">
-                <ul>
-                <li>Sản Phẩm</li>
-                <li>Bảo Hành</li>
-                <li>Hướng Dẫn Sử Dụng</li>
-                <li>Công trình tiêu biểu</li>
-            </ul>
-            </span>
+    <div class="col-3 ">
+        <div class="infoBox" id="firstBox">
+            <div class="desciption">
+                <div class="boxTitle">Menu</div>
+                <span class="boxDescription">
+                    <ul>
+                    <li>Sản Phẩm</li>
+                    <li>Bảo Hành</li>
+                    <li>Hướng Dẫn Sử Dụng</li>
+                    <li>Công trình tiêu biểu</li>
+                </ul>
+                </span>
+            </div>
+        </div>
+    
+        <div class="infoBox" id="firstBox">
+            <div class="desciption">
+                <div class="boxTitle">Thông tin liên hệ</div>
+                <span class="boxDescription">
+                    <ul>
+                    <li>Sản Phẩm</li>
+                    <li>Bảo Hành</li>
+                    <li>Hướng Dẫn Sử Dụng</li>
+                    <li>Công trình tiêu biểu</li>
+                </ul>
+                </span>
+            </div>
         </div>
     </div>
-
+</div>
 
     <div id="logoContainer">
         <img src="../../Data_(DO_NOT_DELETE)/Image/Logos.png" id="logo">
