--- a/WebPC/CongTrinhTieuBieu/main.html
+++ b/WebPC/CongTrinhTieuBieu/main.html
@@ -10,12 +10,12 @@
 <body>
     <img class="header" id="title">
     <div id="button">
-        <span id="first">Trang chủ</span>
+        <span >Trang chủ</span>
         <span>Sản phẩm</span>
         <span>Chứng nhận</span>
         <span>Bảo hành</span>
         <span>Hướng dẫn sử dụng</span>
-        <span>Công trình tiêu biểu</span>
+        <span id="first"s>Công trình tiêu biểu</span>
         <span id="last">Tin tức</span>
     </div>
     <img class="header" id="scrollpane">
