công trình tiêu biẻu

--- a/WebPC/CongTrinhTieuBieu/main.html
+++ b/WebPC/CongTrinhTieuBieu/main.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
     <img class="header" id="title">
@@ -19,36 +20,60 @@
         <span id="last">Tin tức</span>
     </div>
     <img class="header" id="scrollpane">
-    <div class="col-3 ">
-        <div class="infoBox" id="firstBox">
-            <div class="desciption">
-                <div class="boxTitle">Menu</div>
-                <span class="boxDescription">
-                    <ul>
-                    <li>Sản Phẩm</li>
-                    <li>Bảo Hành</li>
-                    <li>Hướng Dẫn Sử Dụng</li>
-                    <li>Công trình tiêu biểu</li>
-                </ul>
-                </span>
+    <div class="row justify-content-around">
+        <div class="col-3 ">
+            <div class="infoBox" id="firstBox">
+                <div class="desciption">
+                    <div class="boxTitle">Menu</div>
+                    <span class="boxDescription">
+                        <ul>
+                        <li>Sản Phẩm</li>
+                        <li>Bảo Hành</li>
+                        <li>Hướng Dẫn Sử Dụng</li>
+                        <li>Công trình tiêu biểu</li>
+                    </ul>
+                    </span>
+                </div>
+            </div>
+        
+            <div class="infoBox" id="firstBox">
+                <div class="desciption">
+                    <div class="boxTitle">Thông tin liên hệ</div>
+                    <span class="boxDescription">
+                        <p>Tư vấn bán hàng</p>
+                        <ul>
+                        <li><i>(028) 3715 0225</i></li>
+                        <li><i>(028) 6259 1121</i></li>
+                    </ul>
+                    <p>Hotline: <i>0933223988</i></p><i class="fa-solid fa-phone-volume"></i>
+                    </span>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-8  text-center">
+            <br>
+            <h2> CÁC CÔNG TRÌNH TIÊU BIỂU</h2>
+            <div class="row justify-content-around">
+                <div class="col">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/1.png" alt=""class="img-thumbnail">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/2.png" alt=""class="img-thumbnail">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/3.png" alt=""class="img-thumbnail">
+                </div>
+                <div class="col">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/4.png" alt=""class="img-thumbnail">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/5.png" alt=""class="img-thumbnail">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/6.png" alt=""class="img-thumbnail">
+                </div>
+                <div class="col">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/7.png" alt=""class="img-thumbnail">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/8.png" alt=""class="img-thumbnail">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/9.png" alt=""class="img-thumbnail">
+                </div>
             </div>
         </div>
     
-        <div class="infoBox" id="firstBox">
-            <div class="desciption">
-                <div class="boxTitle">Thông tin liên hệ</div>
-                <span class="boxDescription">
-                    <ul>
-                    <li>Sản Phẩm</li>
-                    <li>Bảo Hành</li>
-                    <li>Hướng Dẫn Sử Dụng</li>
-                    <li>Công trình tiêu biểu</li>
-                </ul>
-                </span>
-            </div>
-        </div>
     </div>
-
 
 
 <div id="logoContainer">
