--- a/WebPC/CongTrinhTieuBieu/main.html
+++ b/WebPC/CongTrinhTieuBieu/main.html
@@ -25,23 +25,21 @@
             <div class="infoBox" id="firstBox">
                 <div class="desciption">
                     <div class="boxTitle">Menu</div>
-                    <span class="boxDescription">
-                        <ul>
+                    <ul class="boxDescription">
                         <li>Sản Phẩm</li>
                         <li>Bảo Hành</li>
                         <li>Hướng Dẫn Sử Dụng</li>
                         <li>Công trình tiêu biểu</li>
                     </ul>
-                    </span>
                 </div>
             </div>
         
             <div class="infoBox" id="firstBox">
                 <div class="desciption">
                     <div class="boxTitle">Thông tin liên hệ</div>
-                    <span class="boxDescription">
+                    <span class="boxDescription" id="infoDescription">
                         <p>Tư vấn bán hàng</p>
-                        <ul>
+                    <ul>
                         <li><i>(028) 3715 0225</i></li>
                         <li><i>(028) 6259 1121</i></li>
                     </ul>
