--- a/WebPC/ChungNhan/main.html
+++ b/WebPC/ChungNhan/main.html
@@ -69,29 +69,12 @@
         </div>
         <div class="item item-2">
             <table id="certiTable">
-                <tbody>
-
-                </tbody>
+                <tbody></tbody>
             </table>
             <nav aria-label="Page navigation example">
-                <ul class="pagination justify-content-center">
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous" onclick="previousPage()">
-                            <span aria-hidden="true">&lsaquo;</span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                    </li>
-                    <li class="page-item active"><a class="page-link" href="#" onclick="goToPage(1)">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#" onclick="goToPage(2)">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#" onclick="goToPage(3)">3</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next" onclick="nextPage()">
-                            <span aria-hidden="true">&rsaquo;</span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </li>
-                </ul>
+                <ul class="pagination justify-content-center" id="paginationList"></ul>
             </nav>
+            
         </div>
     </div>
 
