script chuyen trang

--- a/WebPC/CongTrinhTieuBieu/main.html
+++ b/WebPC/CongTrinhTieuBieu/main.html
@@ -52,7 +52,7 @@
         <div class="col-8  text-center">
             <br>
             <h2> CÁC CÔNG TRÌNH TIÊU BIỂU</h2>
-            <div class="row justify-content-around">
+            <!-- <div class="row justify-content-around">
                 <div class="col">
                     <img src="../../Data_(DO_NOT_DELETE)/Image/1.png" alt=""class="img-thumbnail">
                     <img src="../../Data_(DO_NOT_DELETE)/Image/2.png" alt=""class="img-thumbnail">
@@ -68,7 +68,61 @@
                     <img src="../../Data_(DO_NOT_DELETE)/Image/8.png" alt=""class="img-thumbnail">
                     <img src="../../Data_(DO_NOT_DELETE)/Image/9.png" alt=""class="img-thumbnail">
                 </div>
+            </div> -->
+
+            <div class="list">
+                <div class="item">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/1.png" alt=""class="img-thumbnail">
+                </div>
+                <div class="item">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/2.png" alt=""class="img-thumbnail">
+                </div>
+                <div class="item">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/3.png" alt=""class="img-thumbnail">
+                </div>
+                <div class="item">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/4.png" alt=""class="img-thumbnail">
+                </div>
+                <div class="item">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/5.png" alt=""class="img-thumbnail">
+                </div>
+                <div class="item">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/6.png" alt=""class="img-thumbnail">
+                </div>
+                <div class="item">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/7.png" alt=""class="img-thumbnail">
+                </div>
+                <div class="item">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/8.png" alt=""class="img-thumbnail">
+                </div>
+                <div class="item">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/9.png" alt=""class="img-thumbnail">
+                </div>
+                <div class="item">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/10.png" alt=""class="img-thumbnail">
+                </div>
+                <div class="item">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/11.png" alt=""class="img-thumbnail">
+                </div>
+                <div class="item">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/12.png" alt=""class="img-thumbnail">
+                </div>
+                <div class="item">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/13.png" alt=""class="img-thumbnail">
+                </div>
+                <div class="item">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/14.png" alt=""class="img-thumbnail">
+                </div>
+                <div class="item">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/15.png" alt=""class="img-thumbnail">
+                </div>
+                <div class="item">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/16.png" alt=""class="img-thumbnail">
+                </div>
             </div>
+            <ul class="listPage">
+           
+            </ul>
         </div>
     
     </div>
@@ -94,6 +148,7 @@
         </ul>
     </div>
 </div>
+
 </body>
 </html>
 
