--- a/WebPC/SanPham/main.html
+++ b/WebPC/SanPham/main.html
@@ -33,7 +33,7 @@
                         <i class="fa fa-search" aria-hidden="true"></i>
                         <input type="text" id="searchInput" placeholder="Nhập tên sản phẩm">
                     </div>
-                    <button id="cartButton"><i class="fas fa-shopping-cart"></i>GIỎ HÀNG</button>
+                    <button id="cartButton">GIỎ HÀNG</button>
 
                 </div>
             </div>
