--- a/WebPC/SanPham/main.html
+++ b/WebPC/SanPham/main.html
@@ -20,7 +20,7 @@
         <span>Hướng dẫn sử dụng</span>
         <span>Công trình tiêu biểu</span>
         <span id="last">Tin tức</span>
-    </div>d
+    </div>
     <img class="header" id="scrollpane">
     <div class="row justify-content-around">
         <div class="col-3 ">
@@ -53,29 +53,12 @@
             </div>
         </div>
 
-        <div class="col-8  text-center">
+        <div class="col-8 text-center">
             <br>
-            <div class="row justify-content-around">
-                <div class="col">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/VigenLite.png" alt=""class="img-thumbnail">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/BigOne.png" alt=""class="img-thumbnail">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/Kenee.png" alt=""class="img-thumbnail">
-                </div>
-                <div class="col">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/MasterLite.png" alt=""class="img-thumbnail">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/Ruby.png" alt=""class="img-thumbnail">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/VigenLite.png" alt=""class="img-thumbnail">
-                </div>
-                <div class="col">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/Viogen.png" alt=""class="img-thumbnail">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/ViogenNộiThất.png" alt=""class="img-thumbnail">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/ViogenNgoạiThất.png" alt=""class="img-thumbnail">
-                </div>
-            </div>
+            <div id="product-list"></div> <!-- Đây là nơi để hiển thị danh sách sản phẩm -->
         </div>
     
-    </div>
-
+    
 
 <div id="logoContainer">
     <img src="../../Data_(DO_NOT_DELETE)/Image/Logos.png" id="logo">
