update server, backend add fetch ChungNhanData

--- a/WebPC/TrangChu/main.html
+++ b/WebPC/TrangChu/main.html
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 </head>
 <body>
-    <img src="public/Chatbox.png" id="chatbox">
+    <img src="/Image/Chatbox.png" id="chatbox">
     <img class="header" id="title">
     <div id="button">
         <span id="first">Trang chủ</span>
@@ -19,9 +19,9 @@
         <span id="congTrinhTieuBieu">Công trình tiêu biểu</span>
         <span id="last">Tin tức</span>
     </div>
-    <img class="header" id="scrollpane" src="public/ScrollPanel.png">
+    <img class="header" id="scrollpane">
     <div class="infoBox" id="firstBox">
-        <img src="public/First.png" id="firstImage">
+        <img src="/Image/First.png" id="firstImage">
         <div class="desciption">
             <div class="boxTitle">Nguồn nguyên liệu tự nhiên</div>
             <span class="boxDescription">
@@ -48,7 +48,7 @@
         </div>
     </div>
     <div class="infoBox" id="thirdBox">
-        <img src="public/Third.png" id="thirdImage">
+        <img src="/Image/Third.png" id="thirdImage">
         <div class="description">
             <div class="boxTitle">Chế độ bảo hành lâu dài</div>
             <span class="boxDescription">
@@ -60,7 +60,7 @@
         </div>
     </div>
     <div id="logoContainer">
-        <img src="public/Logos.png" id="logo">
+        <img src="/Image/Logos.png" id="logo">
     </div>
     <div id="footer">
         <div id="companyInfo">
