fixing css issue

--- a/WebPC/CongTrinhTieuBieu/main.html
+++ b/WebPC/CongTrinhTieuBieu/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Công trình Tiêu biểu</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CongTrinhTieuBieuStyle.css">
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
@@ -72,7 +72,7 @@
 
             <div class="list">
                 <div class="item">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/1.png" alt=""class="img-thumbnail">
+                    <img src="../../Data_(DO_NOT_DELETE)Image/1.png" alt=""class="img-thumbnail">
                 </div>
                 <div class="item">
                     <img src="../../Data_(DO_NOT_DELETE)/Image/2.png" alt=""class="img-thumbnail">
