--- a/WebPC/SanPham/main.html
+++ b/WebPC/SanPham/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="SanPhamStyles.css">
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
@@ -100,6 +100,6 @@
 <script src="../../Data_(DO_NOT_DELETE)/CongTyData.js"></script>
 <script src="../../Data_(DO_NOT_DELETE)/HeaderData.js"></script>
 <script src="../../Data_(DO_NOT_DELETE)/SanPhamData.js"></script>
-<script src="script.js"></script>
+<script src="scripts.js"></script>
 
 
