--- a/WebPC/CongTrinhTieuBieu/main.html
+++ b/WebPC/CongTrinhTieuBieu/main.html
@@ -72,7 +72,7 @@
 
             <div class="list">
                 <div class="item">
-                    <img src="../../Data_(DO_NOT_DELETE)Image/1.png" alt=""class="img-thumbnail">
+                    <img src="../../Data_(DO_NOT_DELETE)/Image/1.png" alt=""class="img-thumbnail">
                 </div>
                 <div class="item">
                     <img src="../../Data_(DO_NOT_DELETE)/Image/2.png" alt=""class="img-thumbnail">
