--- a/WebPC/BaoHanh/main.html
+++ b/WebPC/BaoHanh/main.html
@@ -10,37 +10,19 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+    <img src="/Image/Chatbox.png" id="chatbox">
     <img class="header" id="title">
     <div id="button">
-        <a href="../TrangChu/main.html">Trang chủ</a>
-        <a href="../SanPham/main.html">Sản phẩm</a>
-        <a href="../ChungNhan/main.html">Chứng nhận</a>
-        <span id="first">Bảo hành</span>
-        <a href="../HuongDanSuDung/">Hướng dẫn sử dụng</a>
-        <a href="../CongTrinhTieuBieu/main.html">Công trình tiêu biểu</a>
-        <a href="../TinTuc/main.html">Tin tức</a>
+        <span id="trangChu">Trang chủ</span>
+        <span id="sanPham">Sản phẩm</span>
+        <span id="chungNhan">Chứng nhận</span>
+        <span id="baoHanh first">Bảo hành</span>
+        <span id="huongDanSuDung">Hướng dẫn sử dụng</span>
+        <span id="congTrinhTieuBieu">Công trình tiêu biểu</span>
+        <span id="last">Tin tức</span>
     </div>
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="../../Data_(DO_NOT_DELETE)/Image/ScrollPanel.png" class="d-block w-100" alt="Image 1">
-          </div>
-          <div class="carousel-item">
-            <img src="../../Data_(DO_NOT_DELETE)/Image/ScrollPanel.png" class="d-block w-100" alt="Image 2">
-          </div>
-          <div class="carousel-item">
-            <img src="../../Data_(DO_NOT_DELETE)/Image/ScrollPanel.png" class="d-block w-100" alt="Image 3">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-    </div>
+    
+    <img class="header" id="scrollpane">
 
     <div class="container">
         <div class="item item-1">
@@ -135,7 +117,7 @@
     </div>
 
     <div id="logoContainer">
-        <img src="../../Data_(DO_NOT_DELETE)/Image/Logos.png" id="logo">
+        <img src="/Image/Logos.png" id="logo">
     </div>
     <div id="footer">
         <div id="companyInfo">
