--- a/WebPC/CongTrinhTieuBieu/main.html
+++ b/WebPC/CongTrinhTieuBieu/main.html
@@ -11,12 +11,12 @@
 <body>
     <img class="header" id="title">
     <div id="button">
-        <span >Trang chủ</span>
-        <span>Sản phẩm</span>
-        <span>Chứng nhận</span>
-        <span>Bảo hành</span>
-        <span>Hướng dẫn sử dụng</span>
-        <span id="first"s>Công trình tiêu biểu</span>
+        <span id="first">Trang chủ</span>
+        <span id="sanPham">Sản phẩm</span>
+        <span id="chungNhan">Chứng nhận</span>
+        <span id="baoHanh">Bảo hành</span>
+        <span id="huongDanSuDung">Hướng dẫn sử dụng</span>
+        <span id="congTrinhTieuBieu">Công trình tiêu biểu</span>
         <span id="last">Tin tức</span>
     </div>
     <img class="header" id="scrollpane">
@@ -52,73 +52,9 @@
         <div class="col-8  text-center">
             <br>
             <h2> CÁC CÔNG TRÌNH TIÊU BIỂU</h2>
-            <!-- <div class="row justify-content-around">
-                <div class="col">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/1.png" alt=""class="img-thumbnail">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/2.png" alt=""class="img-thumbnail">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/3.png" alt=""class="img-thumbnail">
-                </div>
-                <div class="col">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/4.png" alt=""class="img-thumbnail">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/5.png" alt=""class="img-thumbnail">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/6.png" alt=""class="img-thumbnail">
-                </div>
-                <div class="col">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/7.png" alt=""class="img-thumbnail">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/8.png" alt=""class="img-thumbnail">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/9.png" alt=""class="img-thumbnail">
-                </div>
-            </div> -->
 
-            <div class="list">
-                <div class="item">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/1.png" alt=""class="img-thumbnail">
-                </div>
-                <div class="item">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/2.png" alt=""class="img-thumbnail">
-                </div>
-                <div class="item">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/3.png" alt=""class="img-thumbnail">
-                </div>
-                <div class="item">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/4.png" alt=""class="img-thumbnail">
-                </div>
-                <div class="item">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/5.png" alt=""class="img-thumbnail">
-                </div>
-                <div class="item">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/6.png" alt=""class="img-thumbnail">
-                </div>
-                <div class="item">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/7.png" alt=""class="img-thumbnail">
-                </div>
-                <div class="item">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/8.png" alt=""class="img-thumbnail">
-                </div>
-                <div class="item">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/9.png" alt=""class="img-thumbnail">
-                </div>
-                <div class="item">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/10.png" alt=""class="img-thumbnail">
-                </div>
-                <div class="item">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/11.png" alt=""class="img-thumbnail">
-                </div>
-                <div class="item">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/12.png" alt=""class="img-thumbnail">
-                </div>
-                <div class="item">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/13.png" alt=""class="img-thumbnail">
-                </div>
-                <div class="item">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/14.png" alt=""class="img-thumbnail">
-                </div>
-                <div class="item">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/15.png" alt=""class="img-thumbnail">
-                </div>
-                <div class="item">
-                    <img src="../../Data_(DO_NOT_DELETE)/Image/16.png" alt=""class="img-thumbnail">
-                </div>
+            <div class="list" id="gallery">
+               
             </div>
             <ul class="listPage">
            
@@ -152,7 +88,7 @@
 </body>
 </html>
 
-
+<script src="../../Data_(DO_NOT_DELETE)/CongTrinhTieuBieu.js"></script>
 <script src="../../Data_(DO_NOT_DELETE)/CongTyData.js"></script>
 <script src="../../Data_(DO_NOT_DELETE)/HeaderData.js"></script>
 <script src="scripts.js"></script>
