update san pham chieu14

--- a/WebPC/SanPham/main.html
+++ b/WebPC/SanPham/main.html
@@ -15,13 +15,13 @@
 <body>
     <img class="header" id="title">
     <div id="button">
-        <a href="../TrangChu/main.html">Trang chủ</a>
-        <a href="../SanPham/main.html">Sản phẩm</a>
-        <span id="first">Chứng nhận</span>
-        <a href="../BaoHanh/main.html">Bảo hành</a>
-        <a href="../HuongDanSuDung/">Hướng dẫn sử dụng</a>
-        <a href="../CongTrinhTieuBieu/main.html">Công trình tiêu biểu</a>
-        <a href="../TinTuc/main.html">Tin tức</a>
+        <span id="trangChu">Trang chủ</span>
+        <span id="first">Sản phẩm</span>
+        <span id="chungNhan">Chứng nhận</span>
+        <span id="baoHanh">Bảo hành</span>
+        <span id="huongDanSuDung">Hướng dẫn sử dụng</span>
+        <span id="congTrinhTieuBieu">Công trình tiêu biểu</span>
+        <span id="last">Tin tức</span>
     </div>
 
 
