update api call

--- a/WebPC/BaoHanh/main.html
+++ b/WebPC/BaoHanh/main.html
@@ -146,4 +146,4 @@
 <script src="../../Data_(DO_NOT_DELETE)/ChungNhanData.js"></script>
 <script src="../../Data_(DO_NOT_DELETE)/CongTyData.js"></script>
 <script src="../../Data_(DO_NOT_DELETE)/HeaderData.js"></script>
-<script src="scripts.js"></script>
+<script src="BaoHanhScripts.js"></script>
