--- a/WebPC/ChungNhan/main.html
+++ b/WebPC/ChungNhan/main.html
@@ -90,4 +90,4 @@
 <script src="../../Data_(DO_NOT_DELETE)/ChungNhanData.js"></script>
 <script src="../../Data_(DO_NOT_DELETE)/CongTyData.js"></script>
 <script src="../../Data_(DO_NOT_DELETE)/HeaderData.js"></script>
-<script src="scripts.js"></script>
+<script src="ChungNhanScripts.js"></script>
