--- a/WebPC/CongTrinhTieuBieu/main.html
+++ b/WebPC/CongTrinhTieuBieu/main.html
@@ -65,7 +65,7 @@
 
 
 <div id="logoContainer">
-    <img src="../../Data_(DO_NOT_DELETE)/Image/Logos.png" id="logo">
+    <img src="/Image/Logos.png" id="logo">
 </div>
 <div id="footer">
     <div id="companyInfo">
@@ -91,4 +91,4 @@
 <script src="../../Data_(DO_NOT_DELETE)/CongTrinhTieuBieu.js"></script>
 <script src="../../Data_(DO_NOT_DELETE)/CongTyData.js"></script>
 <script src="../../Data_(DO_NOT_DELETE)/HeaderData.js"></script>
-<script src="scripts.js"></script>
+<script src="CongTrinhTieuBieuScripts.js"></script>
