--- a/WebPC/HuongDanSuDung/main.html
+++ b/WebPC/HuongDanSuDung/main.html
@@ -56,7 +56,7 @@
             <h2> QUY TRÌNH SỬ DỤNG</h2>
             <div class="row justify-content-around">
                 <div class="col">
-                    <img src="/Image/huongdansudung.png" alt=""class="img-thumbnail">
+                    <img src="/Image/huongdansudung.png" alt=""class="img-thumbnail" style="border: 1px solid black; border-radius: 20px">
                     <img src="/Image/LuuY.png" alt=""class="img-thumbnail">
                 </div>
             </div>
