--- a/WebPC/TinTuc/main.html
+++ b/WebPC/TinTuc/main.html
@@ -51,7 +51,7 @@
 
         <div class="col-8  text-center">
             <br>
-            <h2> CÁC CÔNG TRÌNH TIÊU BIỂU</h2>
+            <h2>TIN TỨC</h2>
 
             <div class="list" id="tuyenDungList">
                
@@ -65,7 +65,7 @@
 
 
 <div id="logoContainer">
-    <img src="../../Data_(DO_NOT_DELETE)/Image/Logos.png" id="logo">
+    <img src="/Image/Logos.png" id="logo">
 </div>
 <div id="footer">
     <div id="companyInfo">
@@ -91,4 +91,4 @@
 <script src="../../Data_(DO_NOT_DELETE)/TinTucData.js"></script>
 <script src="../../Data_(DO_NOT_DELETE)/CongTyData.js"></script>
 <script src="../../Data_(DO_NOT_DELETE)/HeaderData.js"></script>
-<script src="scripts.js"></script>
+<script src="TinTucScripts.js"></script>
