--- a/WebPC/LienHe/main.html
+++ b/WebPC/LienHe/main.html
@@ -67,7 +67,7 @@
     </div>
 
     <div id="logoContainer">
-        <img src="../../Data_(DO_NOT_DELETE)/Image/Logos.png" id="logo">
+        <img src="/Image/Logos.png" id="logo">
     </div>
     <div id="footer">
         <div id="companyInfo">
