--- a/WebPC/SanPham/main.html
+++ b/WebPC/SanPham/main.html
@@ -74,7 +74,7 @@
     
 
 <div id="logoContainer">
-    <img src="../../Data_(DO_NOT_DELETE)/Image/Logos.png" id="logo">
+    <img src="/Image/Logos.png" id="logo">
 </div>
 <div id="footer">
     <div id="companyInfo">
