update phone cttb

--- a/WebPhone/CongTrinhTieuBieu/main.html
+++ b/WebPhone/CongTrinhTieuBieu/main.html
@@ -14,9 +14,9 @@
     </div>
     <img class="header" id="scrollpane">
 
-    <div class="col-8  text-center">
+    <div class="text-center">
         <br>
-        <h2> CÁC CÔNG TRÌNH TIÊU BIỂU</h2>
+        <h2 class="title"> CÁC CÔNG TRÌNH TIÊU BIỂU</h2>
 
         <div class="list" id="gallery">
            
