update phone cttb

--- a/WebPC/CongTrinhTieuBieu/main.html
+++ b/WebPC/CongTrinhTieuBieu/main.html
@@ -6,10 +6,13 @@
     <title>Công trình Tiêu biểu</title>
     <link rel="stylesheet" href="CongTrinhTieuBieuStyle.css">
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+   
 </head>
 <body>
-    <img class="header" id="title">
+    <div>
+        <img class="header" id="title">
+    </div>
+    
     <div id="button">
         <span id="first">Trang chủ</span>
         <span id="sanPham">Sản phẩm</span>
