--- a/WebPC/SanPham/main.html
+++ b/WebPC/SanPham/main.html
@@ -34,7 +34,7 @@
                     <div> </div>
 
                     <div class="searchContainer">
-                        <i class="fa fa-search" aria-hidden="true"></i>
+                        <!-- <i class="fa fa-search" aria-hidden="true"></i> -->
                         <input type="text" id="searchInput" placeholder="Nhập tên sản phẩm">
                     </div>
                     <button id="cartButton">GIỎ HÀNG</button>
@@ -51,7 +51,7 @@
                         <li><i>(028) 3715 0225</i></li>
                         <li><i>(028) 6259 1121</i></li>
                     </ul>
-                    <p>Hotline: <i>0933223988</i></p><i class="fa-solid fa-phone-volume"></i>
+                    <span>Hotline: <i>0933223988                            </i></span><i class="fa-solid fa-phone-volume"></i>
                     </span>
                 </div>
             </div>
@@ -97,9 +97,6 @@
 </html>
 
 
-<script src="../../Data_(DO_NOT_DELETE)/CongTyData.js"></script>
-<script src="../../Data_(DO_NOT_DELETE)/HeaderData.js"></script>
-<script src="../../Data_(DO_NOT_DELETE)/SanPhamData.js"></script>
-<script src="scripts.js"></script>
+<script src="SanPhamScripts.js"></script>
 
 
