Up sanPham_Phone

--- a/WebPC/SanPham/main.html
+++ b/WebPC/SanPham/main.html
@@ -40,11 +40,13 @@
         <div class="col-3 ">
             <div class="infoBox" id="firstBox_1">
                 <div class="description">
-                    <div style="font-size: 30px; font-weight: bold; margin-bottom: 20px">Tìm kiếm sản phẩm</div>
+
+                    <div class="boxTitle">Tìm kiếm sản phẩm</div>
+
                     <div class="searchContainer">
                         <input type="text" id="searchInput" placeholder="Nhập tên sản phẩm">
                     </div>
-                    <button id="cartButton">TÌM KIẾM</button>
+                    <button id="searchButton">Tìm kiếm</button>
 
                 </div>
             </div>
