--- a/WebPC/BaoHanh/main.html
+++ b/WebPC/BaoHanh/main.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <img src="/Image/Chatbox.png" id="chatbox">
-    <img class="header" id="title">
+    <img class="header" id="title" src="/Image/Title.png">
     <div id="button">
         <span id="trangChu">Trang chủ</span>
         <span id="sanPham">Sản phẩm</span>
@@ -50,68 +50,17 @@
             </div>
         </div>
         <div class="item item-2">
-          <p>Mẫu hợp đồng bảo hành: <u><i>Hình ảnh</i></u></p>
-          <p style="text-align: center;"><b>Bảng bảo hành các sản phẩm</b></p>
+            <p>Mẫu hợp đồng bảo hành: <u><i>Hình ảnh</i></u></p>
+            <p style="text-align: center;"><b>Bảng bảo hành các sản phẩm</b></p>
             <table>
-              <thead>
-                <tr>
-                    <th>Sản phẩm</th>
-                    <th>Nội thất</th>
-                    <th>Ngoại thất</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>EMPEROR</td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>VIOGEN</td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>LUCKY</td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                  <td>MASTER</td>
-                  <td></td>
-                  <td></td>
-              </tr>
-              <tr>
-                  <td>SIMON</td>
-                  <td></td>
-                  <td></td>
-              </tr>
-              <tr>
-                  <td>DANTOM</td>
-                  <td></td>
-                  <td></td>
-              </tr>
-              <tr>
-                  <td>VALTEX</td>
-                  <td></td>
-                  <td></td>
-              </tr>
-              <tr>
-                  <td>VIGEN</td>
-                  <td></td>
-                  <td></td>
-              </tr>
-              <tr>
-                  <td>OGEN</td>
-                  <td></td>
-                  <td></td>
-              </tr>
-              <tr>
-                <td>GOLD</td>
-                <td></td>
-                <td></td>
-            </tr>
-            </tbody>
+                <thead>
+                    <tr>
+                        <th>Sản phẩm</th>
+                        <th>Nội thất</th>
+                        <th>Ngoại thất</th>
+                    </tr>
+                </thead>
+                <tbody id="product-table-body"></tbody>
             </table>
         </div>
     </div>
@@ -140,10 +89,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+    <script src="BaoHanhScripts.js"></script>
 </body>
 </html>
-
-<script src="../../Data_(DO_NOT_DELETE)/ChungNhanData.js"></script>
-<script src="../../Data_(DO_NOT_DELETE)/CongTyData.js"></script>
-<script src="../../Data_(DO_NOT_DELETE)/HeaderData.js"></script>
-<script src="BaoHanhScripts.js"></script>
