update ChungNhan, BaoHanh

--- a/WebPC/BaoHanh/main.html
+++ b/WebPC/BaoHanh/main.html
@@ -16,7 +16,7 @@
         <span id="trangChu">Trang chủ</span>
         <span id="sanPham">Sản phẩm</span>
         <span id="chungNhan">Chứng nhận</span>
-        <span id="baoHanh first">Bảo hành</span>
+        <span id="baoHanh">Bảo hành</span>
         <span id="huongDanSuDung">Hướng dẫn sử dụng</span>
         <span id="congTrinhTieuBieu">Công trình tiêu biểu</span>
         <span id="last">Tin tức</span>
@@ -76,12 +76,12 @@
         <div id="navigation">
             <span id="navTitle">Tra cứu</span>
             <ul>
-                <li>Sản phẩm</li>
-                <li>Chứng nhận</li>
-                <li>Bảo hành</li>
-                <li>Hướng dẫn sử dụng</li>
-                <li>Công trình tiêu biểu</li>
-                <li>Liên hệ</li>
+                <li id="navSanPham">Sản phẩm</li>
+                <li id="navChungNhan">Chứng nhận</li>
+                <li id="navBaoHanh">Bảo hành</li>
+                <li id="navHuongDanSuDung">Hướng dẫn sử dụng</li>
+                <li id="navCongTrinhTieuBieu">Công trình tiêu biểu</li>
+                <li id="navLienHe">Liên hệ</li>
             </ul>
         </div>
     </div>
