--- a/WebPhone/ChungNhan/main.html
+++ b/WebPhone/ChungNhan/main.html
@@ -10,10 +10,21 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+    <img class="header" id="title" src="/Image/Title.png">
+    <div class="menu-btn" onclick="toggleMenu()">
+        <img id="menu" src="/Image/Menu.png">
+    </div>
+    <div class="side-menu" id="sideMenu">
+        <span id="trangChu">Trang chủ</span>
+        <span id="sanPham">Sản phẩm</span>
+        <span id="chungNhan">Chứng nhận</span>
+        <span id="baoHanh">Bảo hành</span>
+        <span id="huongDanSuDung">Hướng dẫn sử dụng</span>
+        <span id="congTrinhTieuBieu">Công trình tiêu biểu</span>
+        <span id="last">Tin tức</span>
+    </div>
     <div style="position: fixed">
         <img src="/Image/Chatbox.png" id="chatbox">
-        <img class="header" id="title" src="/Image/Title.png">
-        <img id="menu" src="/Image/Menu.png">
     </div>
     <img class="header" id="scrollpane">
 <!-- ChungNhan Content -->
