--- a/WebPhone/LienHe/main.html
+++ b/WebPhone/LienHe/main.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="PhoneStyle.css">
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 </head>
+
+
 <body>
     <div class="infoBox" id="firstBox">
         <div class="desciption">
@@ -46,7 +48,4 @@
 </body>
 </html>
 
-<script src="../../Data_(DO_NOT_DELETE)/ChungNhanData.js"></script>
-<script src="../../Data_(DO_NOT_DELETE)/CongTyData.js"></script>
-<script src="../../Data_(DO_NOT_DELETE)/HeaderData.js"></script>
-<script src="scripts.js"></script>
+<script src="PhoneLienHe.js"></script>
