--- a/WebPhone/TrangChu/main.html
+++ b/WebPhone/TrangChu/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bột trét Trường Sinh</title>
     <link rel="stylesheet" href="PhoneStyles.css">
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 </head>
@@ -12,7 +12,9 @@
         <img class="header" id="title">
         <img id="menu" src="/Image/Menu.png">
     </div>
-    <img class="header" id="scrollpane">
+    <div>
+        <img class="header" id="scrollpane">
+    </div>
 
     <div class="infoBox" id="firstBox">
         <img src="/Image/First.png" id="firstImage">
@@ -25,7 +27,7 @@
         </div>
     </div>
 
-    <div class="infoBox" id="secondBox" style="height: 60vw">
+    <div class="infoBox" id="secondBox">
         <div id="secondBoxImage">
             <img id="firstCer">
             <img id="secondCer">
