layout and color change

--- a/WebPC/TrangChu/main.html
+++ b/WebPC/TrangChu/main.html
@@ -21,6 +21,9 @@
         <span id="last">Tin tức</span>
     </div>
     <img class="header" id="scrollpane">
+    <div id="logoContainer">
+        <img src="/Image/Logos.png" id="logo">
+    </div>
     <div class="infoBox" id="firstBox">
         <img src="/Image/First.png" id="firstImage">
         <div class="desciption">
@@ -60,24 +63,21 @@
             </span>
         </div>
     </div>
-    <div id="logoContainer">
-        <img src="/Image/Logos.png" id="logo">
-    </div>
     <div id="footer">
         <div id="companyInfo">
-            <span id="footerTitle"></span>
+            <span id="footerTitle" style="font-size: 12;"></span>
             <ul id="infoDisplay">
             </ul>
         </div>
         <div id="navigation">
             <span id="navTitle">Tra cứu</span>
             <ul>
-                <li>Sản phẩm</li>
-                <li>Chứng nhận</li>
-                <li>Bảo hành</li>
-                <li>Hướng dẫn sử dụng</li>
-                <li>Công trình tiêu biểu</li>
-                <li>Liên hệ</li>
+                <li style="font-size: 12;">Sản phẩm</li>
+                <li style="font-size: 12;">Chứng nhận</li>
+                <li style="font-size: 12;">Bảo hành</li>
+                <li style="font-size: 12;">Hướng dẫn sử dụng</li>
+                <li style="font-size: 12;">Công trình tiêu biểu</li>
+                <li style="font-size: 12;">Liên hệ</li>
             </ul>
         </div>
     </div>
