--- a/WebPhone/SanPham/main.html
+++ b/WebPhone/SanPham/main.html
@@ -13,6 +13,17 @@
     <div style="position: fixed">
         <img class="header" id="title">
         <img id="menu" src="/Image/Menu.png">
+        <!-- Menu sẽ trượt vào từ bên trái -->
+        <div id="sideMenu" class="side-menu">
+            <a href="/TrangChu">Trang chủ</a>
+            <a href="/SanPham">Sản phẩm</a>
+            <a href="/ChungNhan">Chứng nhận</a>
+            <a href="/BaoHanh">Bảo hành</a>
+            <a href="/HuongDanSuDung">Hướng dẫn sử dụng</a>
+            <a href="/CongTrinhTieuBieu">Công trình tiêu biểu</a>
+            <a href="/TinTuc">Tin tức</a>
+            <a href="/LienHe">Liên hệ</a>
+        </div>
     </div>
     <img class="header" id="scrollpane">
 
@@ -38,7 +49,7 @@
         </div>
     </div>
 
-    
+
 
     <div id="logoContainer">
         <img src="/Image/Logos.png" id="logo">
