cong trinh tieu bieu

--- a/WebPC/CongTrinhTieuBieu/main.html
+++ b/WebPC/CongTrinhTieuBieu/main.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div>
+        <img src="/Image/Chatbox.png" id="chatbox">
         <img class="header" id="title">
     </div>
     
