--- a/WebPC/ChungNhan/main.html
+++ b/WebPC/ChungNhan/main.html
@@ -23,7 +23,9 @@
     </div>
     
     <img class="header" id="scrollpane">
-
+    <div id="logoContainer">
+        <img src="/Image/Logos.png" id="logo">
+    </div>
     <div class="container">
         <div class="item item-1">
             <div class="bar">
@@ -60,23 +62,20 @@
         </div>
     </div>
 
-    <div id="logoContainer">
-        <img src="/Image/Logos.png" id="logo">
-    </div>
     <div id="footer">
         <div id="companyInfo">
-            <span id="footerTitle"></span>
+            <span id="footerTitle" style="font-size: 12;"></span>
             <ul id="infoDisplay"></ul>
         </div>
         <div id="navigation">
             <span id="navTitle">Tra cứu</span>
             <ul>
-                <li id="navSanPham">Sản phẩm</li>
-                <li id="navChungNhan">Chứng nhận</li>
-                <li id="navBaoHanh">Bảo hành</li>
-                <li id="navHuongDanSuDung">Hướng dẫn sử dụng</li>
-                <li id="navCongTrinhTieuBieu">Công trình tiêu biểu</li>
-                <li id="navLienHe">Liên hệ</li>
+                <li id="navSanPham" style="font-size: 12;">Sản phẩm</li>
+                <li id="navChungNhan" style="font-size: 12;">Chứng nhận</li>
+                <li id="navBaoHanh" style="font-size: 12;">Bảo hành</li>
+                <li id="navHuongDanSuDung" style="font-size: 12;">Hướng dẫn sử dụng</li>
+                <li id="navCongTrinhTieuBieu" style="font-size: 12;">Công trình tiêu biểu</li>
+                <li id="navLienHe" style="font-size: 12;">Liên hệ</li>
             </ul>
         </div>
     </div>
@@ -87,7 +86,4 @@
 </body>
 </html>
 
-<script src="../../Data_(DO_NOT_DELETE)/ChungNhanData.js"></script>
-<script src="../../Data_(DO_NOT_DELETE)/CongTyData.js"></script>
-<script src="../../Data_(DO_NOT_DELETE)/HeaderData.js"></script>
 <script src="ChungNhanScripts.js"></script>
